--- a/src/style.scss
+++ b/src/style.scss
@@ -46,11 +46,15 @@ h1 {
     width: 373px;
     height: 80px;
     background-color: rgba(127, 255, 212, 0.2);
+    border-top-style: inset;
+    border-right-style: inset;
     border-color: rgba(54, 100, 85, 0.9);
     border-left: 5px solid rgba(54, 100, 85, 0.9);
     border-bottom: 5px solid rgba(54, 100, 85, 0.9);
     padding: 10px;
-    font-size: 30px;
+    font-size: 45px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 500;
     margin-bottom: 10px;
     &:focus-visible {
         outline: none;
@@ -79,26 +83,39 @@ h1 {
     align-items: center;
     font-size: 20px;
     user-select: none;
+    font-family: 'Courier New', Courier, monospace;
     cursor: pointer;
+}
+
+@mixin ChangeColor ($color) {
+    &:hover {
+        background-color: lighten($color, 10%);
+    }
 }
 
 .mr {
     height: 40px;
     background-color: #e9967a;
+    font-weight: 600;
+    @include ChangeColor(#e9967a);
 }
 
 .calc-btn-er {
     background-color: #ff0033;
     font-weight: 600;
+    @include ChangeColor(#ff0033);
 }
 
 .calc-btn-num {
     background-color: #00cbcb;
+    font-weight: 600;
+    @include ChangeColor(#00cbcb);
 }
 
 .calc-btn-sym {
     background-color: #7400e1;
     font-weight: 900;
+    @include ChangeColor(#7400e1);
 }
 
 .footer-cont {
